Update user tab

--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
 						<div class="wizard-navigation">
 							<ul>
                                 <li><a href="#captain" data-toggle="tab"></a></li>
-	                            <li><a href="#details" data-toggle="tab"></a></li>
+	                            <li><a href="#returning-tab" data-toggle="tab"></a></li>
 	                        </ul>
 						</div>
                         <div class="tab-content">
@@ -82,7 +82,7 @@
                             <div class="tab-pane" id="details">
                               <div class="row">
                                   <div class="col-sm-12">
-                                    <h4 class="info-text"> Let's start with the basic details</h4>
+                                    <h4 class="info-text"> New User</h4>
                                   </div>
                                   <div class="col-sm-5 col-sm-offset-1">
                                       <div class="form-group">
@@ -145,7 +145,7 @@
                             
                             <div class="tab-pane" id="returning-tab">
                                 <div class="row">
-                                    <h4 class="info-text"> Enter Your Surname And Unique Code for Confirmation </h4>
+                                    <h4 class="info-text"> Returning User </h4>
                                     <div class="col-sm-5 col-sm-offset-1">
                                         <div class="form-group">
                                           <label>Surname Name</label>
